infra/proxy/wled/kitchen.wled.home/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kitchen-wled-home-proxy
  namespace: apps
subsets:
  - addresses:
      - ip: 10.0.1.104
    ports:
      - port: 80
