infra/proxy/wled/kitchen.wled.home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchen-wled-home-proxy
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None
