infra/proxy/wled/kitchen.wled.home/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchen-wled-home-internal
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: kitchen.wled.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kitchen-wled-home-proxy
            port:
              number: 80
  tls:
  - hosts:
    - kitchen.wled.home
    secretName: kitchen.wled.home-internal-tls
